<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.login.Onboarding">

    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:hint="@string/prompt_email"
            android:importantForAutofill="no" android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:visibility="invisible"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionDone"
            android:importantForAutofill="no" android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" android:visibility="invisible"/>

    <Button
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.85" android:id="@+id/Login"
            android:backgroundTint="#4C0945" android:textColor="@color/white"/>

    <Button
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="1.0" android:id="@+id/Register"
            android:backgroundTint="#4C0945" android:textColor="@color/white"/>

    <ProgressBar
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="409dp"
            android:layout_height="335dp"
            android:id="@+id/App_Title" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="214dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="166dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="3dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5">

        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Title"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="157dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="159dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="175dp" android:layout_marginEnd="176dp"
                app:layout_constraintEnd_toEndOf="parent" tools:text="Heroic Organizer"
                app:layout_constraintHorizontal_bias="0.489" app:layout_constraintVertical_bias="1.0"
                android:scaleX="3" android:scaleY="3"/>
        <TextView
                android:text="@string/app_slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Slogan"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="98dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="218dp" tools:text="Your Personal Comic Collection Hub"
                app:layout_constraintVertical_bias="0.0" android:scaleX="1.5" android:scaleY="1.5"/>
        <ImageView
                android:importantForAccessibility="no" android:src="@android:drawable/sym_def_app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/imageView2"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="168dp"
                android:layout_marginEnd="169dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="60dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="202dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>